--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,146 @@
+/*Reset Styles*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
 body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+/* Global Styles */
+
+body {
+  font: 14px 'Open Sans', sans-serif;
+  width: 100%;
 }
 
 a {
-  color: #00B7FF;
+	color:#6BCB98;
+	text-decoration: none;
+}
+
+a:hover {
+	text-decoration: underline;
+}
+
+h1 {
+	font-size: 32px;
+	color: #FFF;
+	text-align: center;
+	vertical-align: middle;
+	padding-top: 35px;
+}
+
+h2 {
+	color: #34313F;
+	font-weight: bold;
+	font-size: 24px;
+	margin-bottom: 7px;
+}
+
+h3 {
+	color: #4B0DC1;
+}
+
+header {
+	background-color: #303D54;
+	height: 125px;
+	width: 100%;
+}
+
+section { 
+	padding: 5%;
+	margin: auto;
+	width:80%;
+}
+
+footer {
+	background-color: #303D54;
+	margin-top: 40px;
+	min-height: 125px;
+}
+
+.tagline{
+	color: #fff;
+	text-align: center;
+	margin-top: 7px;
+}
+
+/* Home Styles*/
+
+.formGroup{
+	width: 80%;
+	margin: 0 auto;
+}
+
+.inputLabel {
+    padding: 10px 10px 10px 0px;
+    display: inline-block;
+    font-size: 18px;
+    color: #3E918F;
+    font-weight: bold;
+}
+
+.formGroup input {
+    width: 100%;
+}
+
+.formGroup input[type=text] {
+    background-color: #EAF2F4;
+	height: 30px;
+}
+
+.formGroup textarea {
+	width: 100%;
+	height: 200px;
+}
+
+.importBtn{	
+	background-color: #303D54;
+	color: #fff;
+	font-size: 16px;
+	border-radius: 5px;
+	border: none;
+	padding: 7px;
+}
+
+.importBtn:hover{	
+	background-color: #3E918F;
 }
