--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -2,11 +2,20 @@
 <html>
   <head>
     <title>{{title}}</title>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <script src="/javascripts/papaparse.min.js"></script>
     <script src='/javascripts/reader.js'></script>
   </head>
   <body>
-    {{{body}}}
+    <header>
+        <h1>upBlog</h1>
+        <p class="tagline"><i>A blog post importer for <a href="http://bigcommerce.com">BigCommerce.</a></i></p>
+    </header>
+  	<div>
+    	{{{body}}}
+    </div>
+    <footer>
+    </footer>
   </body>
 </html>
