--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -9,8 +9,8 @@
   </head>
   <body>
     <header>
-        <h1>upBlog</h1>
-        <p class="tagline"><i>A blog post importer for <a href="http://bigcommerce.com">BigCommerce.</a></i></p>
+        <img class="logo" src="../images/logo.png">
+        <p class="tagline"><i>Move your blog to <a class="bigcommerce" href="http://bigcommerce.com">BigCommerce.</a></i></p>
     </header>
   	<div>
     	{{{body}}}
